[package]
name = "fee-manager"
version = "0.1.0"
authors = ["Sergey Yakovlev <selfuryon@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.5"
axum-macros = "0.2"
tokio = { version = "1.21", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace"] }
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "2.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"] }
clap = {version = "4.0", features = ["derive"]}

